[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player/CharSheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sounds/jump.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sounds/12_Step_wood_03.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/goresplat.wav" type="AudioStream" id=4]
[ext_resource path="res://Scripts/Hurtbox.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Hitbox.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sounds/Male Hurt/Mino/5.wav" type="AudioStream" id=7]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=19]

[sub_resource type="CapsuleShape2D" id=9]
radius = 46.0
height = 24.0

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 14.75, 24 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 37.0
height = 28.0

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 1.8
loop = true
step = 0.0769231
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.154, 0.308, 0.462, 0.616, 0.77, 0.924, 1.078, 1.232, 1.386, 1.54, 1.694 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Jumping"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 49, 49, 50, 51, 52, 53 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "Walking"
length = 0.9
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59 ]
}

[sub_resource type="Animation" id=7]
resource_name = "attacking"
length = 0.35
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.33 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.21, 0.33 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=8]
resource_name = "die"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=11]
resource_name = "hurt"
length = 0.3
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 81 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.27 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hurt_finished"
} ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 19 )
hitpoints = 50

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 14
vframes = 8
frame = 28

[node name="Hurtbox" type="Area2D" parent="Sprite"]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hurtbox"]
position = Vector2( 0, 4 )
shape = SubResource( 9 )

[node name="Hitbox" type="Area2D" parent="Sprite"]
script = ExtResource( 6 )
Damage = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hitbox"]
position = Vector2( 68.25, 10 )
shape = SubResource( 10 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -8, 0 )
current = true
process_mode = 0
smoothing_enabled = true
offset_h = 1.0
offset_v = -1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 7 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
reset_on_save = false
method_call_mode = 1
anims/Idle = SubResource( 3 )
anims/Jumping = SubResource( 5 )
anims/RESET = SubResource( 4 )
anims/Walking = SubResource( 6 )
anims/attacking = SubResource( 7 )
anims/die = SubResource( 8 )
anims/hurt = SubResource( 11 )

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="walkSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )
volume_db = -9.0

[node name="jumpSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 2 )
volume_db = 3.0

[node name="deathSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )
volume_db = -12.0

[node name="hurtSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
